<resources>
    <string name="app_name">Wikipedia</string>
    <string name="app_name_beta">Wikipedia Beta</string>
    <string name="app_name_alpha">Wikipedia Alpha</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="acra_report_dialog_title">Wikipedia crashed :(</string>
    <string name="acra_report_dialog_text">Send us a crash report</string>
    <string name="acra_report_dialog_comment">What were you doing when the crash happened?</string>
    <string name="search_hint">Search Wikipedia</string>
    <string name="history_activity_title">History</string>
    <string name="nav_item_history">History</string>
    <string name="error_network_error">There is no network connection :(</string>
    <string name="search_network_error">Network error. Tap to try again.</string>
    <string name="page_error_retry">Retry</string>
    <string name="menu_clear_all_history">Clear history</string>
    <string name="menu_clear_all_bookmarks">Clear bookmarks</string>
    <string name="menu_clear_all_saved_pages">Clear saved pages</string>
    <string name="page_does_not_exist_error">This page does not exist.</string>
    <string name="nav_item_today">Today</string>
    <string name="dialog_title_clear_history">Clear browsing history?</string>
    <string name="saved_pages_activity_title">Saved pages</string>
    <string name="nav_item_saved_pages">Saved pages</string>
    <string name="menu_update_all_saved_pages">Update saved pages</string>
    <string name="menu_update_selected_saved_pages">Update saved pages</string>
    <string name="dialog_prompt_refresh_all_saved_pages">Update all saved pages?</string>
    <string name="toast_saved_page_refreshed">Saved pages updated</string>
    <string name="menu_save_page">Save page</string>
    <string name="menu_share_page">Share</string>
    <string name="share_via">Share via</string>
    <string name="dialog_title_clear_saved_pages">Clear all saved pages?</string>
    <string name="dialog_message_clear_saved_pages">Are you sure you want to clear all saved pages?</string>
    <string name="toast_saving_page">Saving page...</string>
    <string name="toast_saved_page">Page saved successfully</string>
    <string name="toast_saved_page_missing_images">Could not save all images</string>
    <string name="toast_save_page_failed">Saving page failed :(</string>
    <string name="toast_refresh_saved_page">Refreshing saved page...</string>
    <string name="delete_selected_saved_pages">Delete</string>
    <string name="toast_saved_page_deleted">Saved page(s) deleted</string>
    <string name="saved_pages_search_list_hint">Search</string>
    <string name="saved_pages_search_empty_message">No pages found matching your query.</string>
    <string name="nearby_activity_title">Nearby</string>
    <string name="nav_item_nearby">Nearby</string>
    <string name="menu_update_nearby">Update nearby</string>
    <string name="nearby_empty_title">No nearby pages here!</string>
    <string name="nearby_empty_message">When you move to a new location, try refreshing this page to learn more about what\'s around you.</string>
    <string name="nearby_distance_in_meters">%d m</string>
    <string name="nearby_distance_in_kilometers">%.2f km</string>
    <string name="nearby_distance_in_feet">%d ft</string>
    <string name="nearby_distance_in_miles">%.2f mi</string>
    <string name="nearby_no_network">No network connection</string>
    <string name="nearby_server_error">Could not get list of nearby places.</string>
    <string name="nearby_no_location">Not able to get location</string>
    <string name="nearby_dialog_goto_settings">Location updates are not enabled on your device. Would you like to go to your device\'s settings to enable Location updates?</string>
    <string name="nearby_set_metric">Show meters/km</string>
    <string name="nearby_set_imperial">Show feet/miles</string>
    <string name="nearby_view_on_map">View place on map</string>
    <string name="last_updated_text">Last updated %s</string>
    <string name="content_license_html"><![CDATA[Content is available under <a href=\"//creativecommons.org/licenses/by-sa/3.0/\">CC BY-SA 3.0</a> unless otherwise noted]]></string>
    <string name="edit_save_action_license_logged_in"><![CDATA[By saving, you agree to the <a href="https://wikimediafoundation.org/wiki/Terms_of_Use">Terms of Use</a>, and to irrevocably release your contributions under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license.]]></string>
    <string name="edit_save_action_license_anon"><![CDATA[By saving, you agree to the <a href="https://wikimediafoundation.org/wiki/Terms_of_Use">Terms of Use</a>, and to irrevocably release your contributions under the <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a> license. Edits will be attributed to the IP address of your device. If you <a href="https://#login">log in</a>, you will have more privacy.]]></string>
    <string name="preference_title_language">Wikipedia language</string>
    <string name="preference_summary_language">Content language</string>
    <string name="preference_languages_filter_hint">Search</string>
    <string name="langlinks_filter_hint">Search</string>
    <string name="menu_other_languages">Read in other languages</string>
    <string name="langlinks_error_retry">Retry</string>
    <string name="langlinks_empty">This page is not available in other languages.</string>
    <string name="langlinks_no_match">No languages found matching your query.</string>
    <string name="settings_activity_title">Settings</string>
    <string name="langlinks_activity_title">Other languages</string>
    <string name="menu_save_changes">Save changes</string>
    <string name="edit_section_error_retry">Retry</string>
    <string name="dialog_saving_in_progress">Saving...</string>
    <string name="edit_saved_successfully">Edit saved!</string>
    <string name="dialog_message_edit_failed">Edit failed!</string>
    <string name="dialog_message_edit_failed_retry">Retry</string>
    <string name="dialog_message_edit_failed_cancel">Cancel</string>
    <string name="dialog_message_leaving_edit">Your changes have not been saved yet. Are you sure you want to leave this page?</string>
    <string name="dialog_message_leaving_edit_leave">Leave</string>
    <string name="dialog_message_leaving_edit_stay">Stay</string>
    <string name="menu_show_toc">Table of Contents</string>
    <string name="search_no_results_found">No results found</string>
    <string name="edit_section_captcha_message">To help protect against automated spam, please enter the words that appear below</string>
    <string name="edit_section_captcha_hint">Repeat words from above</string>
    <string name="title_captcha">Enter CAPTCHA</string>
    <string name="edit_section_captcha_reload">Tap CAPTCHA to reload</string>
    <string name="edit_saved_page_refresh">This saved page may be out of date, and must be refreshed for editing to be enabled. Would you like to refresh the page?</string>
    <string name="nav_item_login">Log in</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_show_check">Display password</string>
    <string name="menu_login">Log in</string>
    <string name="login_activity_title">Login to Wikipedia</string>
    <string name="login_in_progress_dialog_message">Logging you in...</string>
    <string name="login_error_wrong_password">Incorrect password</string>
    <string name="login_error_wrong_username">Incorrect username</string>
    <string name="login_success_toast">Login Success!</string>
    <string name="login_error_blocked">This user has been blocked</string>
    <string name="login_error_throttled"><![CDATA[Too many login attempts. Wait for a few minutes and try again.]]></string>
    <string name="login_error_unknown">Login failed :(</string>
    <string name="login_error_no_network">No network connection</string>
    <string name="nav_item_logout">Log out</string>
    <string name="preference_title_logout">Log out</string>
    <string name="preference_summary_logout">Log out of your Wikipedia account</string>
    <string name="preference_summary_notloggedin">Not logged in.</string>
    <string name="toast_logout_complete">Logged out</string>
    <string name="saved_pages_empty_title">No saved pages here!</string>
    <string name="saved_pages_empty_message">Saved pages are pretty awesome. Think of them as bookmarks that you can read even when you are offline.</string>
    <string name="history_empty_title">No recent pages here!</string>
    <string name="history_empty_message">You probably deleted all of them. Next time you go to a page you can get back to it from here.</string>
    <string name="delete_selected_history">Delete</string>
    <string name="wp_stylized"><![CDATA[<big>W</big>IKIPEDI<big>A</big>]]></string>
    <string name="wp_tag_line">The Free Encyclopedia</string>
    <string name="skip">Skip</string>
    <string name="create_account_username_hint">Username</string>
    <string name="create_account_password_hint">Password</string>
    <string name="menu_create_account">Create account</string>
    <string name="login_create_account_link">Don\'t have an account? Join Wikipedia</string>
    <string name="create_account_login_link">Already have an account? Log in</string>
    <string name="create_account_activity_title">Create an account</string>
    <string name="edit_section_activity_title">Edit section</string>
    <string name="dialog_create_account_checking_progress">Verifying</string>
    <string name="create_account_email_hint">Email (Optional)</string>
    <string name="create_account_password_repeat_hint">Repeat password</string>
    <string name="create_account_passwords_mismatch_error">Passwords don\'t match</string>
    <string name="create_account_email_error">Invalid email address</string>
    <string name="create_account_username_exists_error">Username already in use</string>
    <string name="create_account_ip_throttle_error">Too many accounts created from this IP address. Try again later.</string>
    <string name="create_account_open_proxy_error">This IP address has been blocked from creating accounts.</string>
    <string name="create_account_button">Create account</string>
    <string name="preferences_general_heading">General</string>
    <string name="zero_warn_when_leaving">Warn if leaving Wikipedia Zero</string>
    <string name="zero_warn_when_leaving_summary">If your mobile operator waives data access charges for the Wikipedia app through a Wikipedia Zero partnership, leaving this setting checked helps you know when you are leaving the Wikipedia app and could be charged.</string>
    <string name="zero_webpage_title">Wikipedia Zero FAQ</string>
    <string name="zero_webpage_url">https://m.wikimediafoundation.org/wiki/Wikipedia_Zero_App_FAQ</string>
    <string name="zero_wikipedia_zero_heading">Wikipedia Zero</string>
    <string name="nav_item_random">Random</string>
    <string name="preference_title_eventlogging_opt_in">Send usage reports</string>
    <string name="preference_summary_eventlogging_opt_in">Allow Wikimedia to collect information about how you use the app to make the app better</string>
    <string name="more_item_preferences">More</string>
    <string name="find_in_page">Find in page</string>
    <string name="find_next">Find next</string>
    <string name="find_previous">Find previous</string>
    <string name="find_close">Close find bar</string>
    <string name="menu_themechooser">Font and theme</string>
    <string name="dialog_close_description">Close</string>
    <string name="share_snippet_button">Share as image</string>
    <string name="share_normal_button">Share as text</string>
    <string name="snippet_share_preview_image_desc">Preview image</string>
</resources>