<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_other_languages"
          android:title="@string/menu_other_languages"
          android:enabled="false"
          android:showAsAction="always"
          />
    <item android:id="@+id/menu_save_page"
          android:icon="@android:drawable/ic_menu_save"
          android:title="@string/menu_save_page"
          android:showAsAction="always"
          android:enabled="false"
          />
    <item android:id="@+id/menu_share_page"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/menu_share_page"
          android:showAsAction="always"
          android:enabled="false"
            />
    <item android:id="@+id/menu_find_in_page"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/find_in_page"
          android:showAsAction="always"
          android:enabled="false"
            />
    <item android:id="@+id/menu_themechooser"
          android:title="@string/menu_themechooser"
          android:showAsAction="always"
          android:enabled="false"
            />
</menu>