<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/onboarding_create_account_button"
        style="@style/button_progressive"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="@string/create_account_button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/onboarding_login_button"
        style="@style/button_secondary"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="@string/create_account_login_link"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/onboarding_skip_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/skip"
        android:textColor="@color/onboarding_skip_gray"
        android:textSize="16sp" />

</merge>