<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >
    <LinearLayout
            android:id="@+id/create_account_primary_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >
        <org.wikipedia.styledviews.StyledEditText
                android:id="@+id/create_account_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_username_hint"
                android:singleLine="true"
                android:inputType="textNoSuggestions"
                />

        <org.wikipedia.styledviews.StyledEditText
                android:id="@+id/create_account_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_password_hint"
                android:singleLine="true"
                android:inputType="textPassword"
                />

        <org.wikipedia.styledviews.StyledEditText
                android:id="@+id/create_account_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_password_repeat_hint"
                android:singleLine="true"
                android:inputType="textPassword"
                />

        <org.wikipedia.styledviews.StyledEditText
                android:id="@+id/create_account_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_email_hint"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                />
    </LinearLayout>

    <include layout="@layout/group_captcha" />
</FrameLayout>