<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/find_in_page_container"
        android:visibility="gone"
        android:background="@drawable/ab_stacked_solid_agora"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
            android:id="@+id/find_in_page_input"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/find_in_page"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:background="@null"
            android:textCursorDrawable="@null"
            />
    <TextView
            android:id="@+id/find_in_page_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/search_item_background"
            android:textSize="20sp"
            android:contentDescription="@string/find_next"
            android:text="↓"
            />
    <TextView
            android:id="@+id/find_in_page_prev"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/search_item_background"
            android:textSize="20sp"
            android:contentDescription="@string/find_previous"
            android:text="↑"
            />
    <TextView
            android:id="@+id/find_in_page_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/search_item_background"
            android:textSize="20sp"
            android:contentDescription="@string/find_close"
            android:text="✕"
            />
</LinearLayout>