<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="@color/white_progressive_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            style="@style/Widget.AppCompat.ImageButton"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="?attr/link_preview_text_color"
            app:srcCompat="@drawable/ic_close_white_24dp"
            android:contentDescription="@string/dialog_close_description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/preview_img"
                android:layout_width="@dimen/share_image_width"
                android:layout_height="@dimen/share_image_height"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="?attr/lead_image_drawable"
                android:contentDescription="@string/snippet_share_preview_image_desc" />

            <Button
                android:id="@+id/share_as_image_button"
                style="@style/ButtonBlueOnWhite"
                android:layout_gravity="center_horizontal"
                android:text="@string/share_snippet_button" />

            <Button
                android:id="@+id/share_as_text_button"
                style="@style/ButtonBlueOnWhite"
                android:layout_gravity="center_horizontal"
                android:text="@string/share_normal_button" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>